--- a/mao/index.htm
+++ b/mao/index.htm
@@ -23,8 +23,8 @@
 <!-- End Jekyll SEO tag -->
 
 
-    <link rel="stylesheet" href="/mao/assets/css/style.css?v=e7db02f3479381debf8b638f560731c83a5e435f">
-    <script src="/mao/assets/js/scale.fix.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css?v=e7db02f3479381debf8b638f560731c83a5e435f">
+    <script src="assets/js/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
@@ -38,7 +38,7 @@
 
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="/mao/favicon.ico" -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="favicon.ico" -->
 
 <!-- end custom head snippets -->
 
