--- a/biubiu/index.htm
+++ b/biubiu/index.htm
@@ -23,8 +23,8 @@
 <!-- End Jekyll SEO tag -->
 
 
-    <link rel="stylesheet" href="/biubiu/assets/css/style.css?v=e7db02f3479381debf8b638f560731c83a5e435f">
-    <script src="/biubiu/assets/js/scale.fix.js"></script>
+    <link rel="stylesheet" href="/x/assets/css/style.css?v=e7db02f3479381debf8b638f560731c83a5e435f">
+    <script src="/x/assets/js/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
