--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="main-top-center hoverDiv" id='source_tv'  onclick="window.open('../new/index.htm')">
+                    <div class="main-top-center hoverDiv" id='source_tv'  onclick="window.open('../new/')">
                         <div>
                             <p class="ac">幸运坐标 (MAX)</p>
                             <p class="ac">Lucky Coord inate</p>
