--- a/mao/index.htm
+++ b/mao/index.htm
@@ -38,7 +38,7 @@
 
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="favicon.ico" -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
 
 <!-- end custom head snippets -->
 
