--- a/biubiu/index.htm
+++ b/biubiu/index.htm
@@ -65,19 +65,23 @@
       <h2 id="BiuBiuTV播放器">BiuBiuTV播放器</h2>
 
 <p>本版依旧是做细节改善，图解新功能，优化用户体验。</p>
-
+<p>【腾讯文档】TV软件汇总中20220521 每天更新。。。</p>
+<p>https://docs.qq.com/sheet/DWnVsZU5uSkhBSHlv</p>
 <p>1、软件星球：https://pan.quark.cn/s/144643e63aa5</p>
 
 <p>2、白侃天下：https://pan.quark.cn/s/fac776bd9eb1</p>  
 
-<p>3、新增功能：</p>  
-
+<p>3、全局接口+直播本地下载：https://pan.quark.cn/s/53bba485fa55</p>  
+        
 <h3 id="Biubiu影院999">Biubiu影院999</h3>  
 <p><a href="https://tsq.lanzoui.com/b0c43qpkb">https://pan.lanzoui.com/iuSfD04onn8d</a></p>  
 <p><a href="https://pan.lanzoui.com/iuSfD04onn8d">https://pan.lanzoui.com/iuSfD04onn8d</a></p>  
-
+<p><a href="https://pan.quark.cn/s/e3cafe0ae140">https://pan.quark.cn/s/e3cafe0ae140</a></p>  
+        
+ 
 <pre><code class="language-更新后空壳解决方案">设置——接口输入  
 
+- http://gg.gg/114uzt    
 - http://laohu.cool/ddtv/dd.json  
 - http://gg.gg/biubiu0  
 
