--- a/new/iso.htm
+++ b/new/iso.htm
@@ -14,13 +14,13 @@
       <h1 class="project-name">Welcome to GitHub </h1>
       <h2 class="project-tagline">Lucky Coord inate</h2>
       
-        <a href="https://liu673cn.github.io/new/" class="btn">View on GitHub</a>
-       <a href="https://liu673cn.github.io/apk/" class="btn">Android 手机应用</a>
-       <a href="https://liu673cn.github.io/win/" class="btn">Windos 电脑软件</a>
+       <a href="https://liu673cn.github.io/new/index.htm" class="btn">View on GitHub</a>
+       <a href="https://liu673cn.github.io/new/apk.htm" class="btn">Android 手机应用</a>
+       <a href="https://liu673cn.github.io/new/win.htm" class="btn">Windos 电脑软件</a>
 
-       <a href="https://liu673cn.github.io/top/" class="btn">Smart TV电视</a>    
-             <a href="https://liu673cn.github.io/mao/" class="btn">CatvodTV 猫影视</a>   
-             <a href="https://liu673cn.github.io/biubiu/" class="btn">Biubiu TV播放器</a>   
+       <a href="https://liu673cn.github.io/new/top.htm" class="btn">Smart TV电视</a>    
+       <a href="https://liu673cn.github.io/mao/" class="btn">CatvodTV 猫影视</a>   
+       <a href="https://liu673cn.github.io/biubiu/" class="btn">Biubiu TV播放器</a>     
       
     </header>
 
