--- a/new/index.htm
+++ b/new/index.htm
@@ -14,7 +14,7 @@
 <script type="text/javascript">
 	$(function(){
 		$("#stateBut").click(function(){
-			$("#stateBut").text()=="收起"?$("#stateBut").text("展开"):$("#stateBut").text("收起");
+			$("#stateBut").text()=="展开"?$("#stateBut").text("收起"):$("#stateBut").text("展开");
 			$("p#class1content").toggle(100);
 		});
 	});
