--- a/new/index.htm
+++ b/new/index.htm
@@ -30,6 +30,14 @@
      
 <p>You can use the <a href="/">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
 
+      <div class="box">
+	<input id="check" type="checkbox">
+	<p>这里是默认显示的内容这里是默认显示的内容这里是默认显示的内容。</p>
+	<p class="element">这里是默认不显示的内容这里是默认不显示的内容这里是默认不显示的内容这里是默认不显示的内容这里是默认不显示的内容这里是默认不显示的内容这里是默认不显示的内容。</p>
+	<label for="check" class="checkin">更多</label>
+	<label for="check" class="checkout">收起</label>
+</div>
+      
 <p>Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</p>
 
 <h3 id="markdown">Markdown</h3>
