--- a/new/win.htm
+++ b/new/win.htm
@@ -25,9 +25,9 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
+      <h2 id="welcome-to-github-pages">Windos 电脑软件</h2>
      
-<p>You can use the <a href="/">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
+<p>百度网盘直连下载器<a href="https://wws.lanzouw.com/iXsv005dx72b">antdownload 3.0.6.zip</a> <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a></p>
 
 <p>Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</p>
 
