--- a/new/apk.htm
+++ b/new/apk.htm
@@ -26,14 +26,11 @@
 
     <main id="content" class="main-content" role="main">
       <h3 id="welcome-to-github-pages">Android 影音阅读系</h3>
-     
-<p>资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">APK下载</a> <a href="https://wws.lanzouw.com/ixpIm04z6wsb"><br />备用</a></p>
 
- <pre><code class="language-更新后空壳解决方案">设置——接口输入  
-
-1.资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">APK下载</a><br /><a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
-2.http://gg.gg/114uzt
-3.http://gg.gg/biubiu0  
+ <pre><code class="language-解决方案">
+- 资源猫 1.106 去广告版 ：10.1M <a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
 
 </code></pre>     
       
