--- a/new/apk.htm
+++ b/new/apk.htm
@@ -28,9 +28,9 @@
       <h3 id="welcome-to-github-pages">Android 影音阅读系</h3>
 
  <pre><code class="language-解决方案">
-- 资源猫 1.106 去广告版 ：10.1M  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
-- 资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
-- 资源猫 1.106 去广告版<a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 资源猫 1.106 去广告版.apk  10.1M  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 影视森林_v1.0.4.apk  24M  <a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
+- 聚合vip播放器 v1.07 去广告版.apk  14.2M <a href="https://melor.lanzoub.com/iDMjo03njo6b">下载</a> 
 
 </code></pre>     
       
