--- a/new/apk.htm
+++ b/new/apk.htm
@@ -38,6 +38,15 @@
       
 <p>Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</p>
 
+      <h3 id="welcome-to-github-pages">Android 影音阅读系</h3>
+
+ <pre><code class="language-解决方案">
+- 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 影视森林_v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
+- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">下载</a> 
+
+</code></pre>     
+      
 <h3 id="markdown">Markdown</h3>
 
 <p>Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for</p>
