--- a/new/win.htm
+++ b/new/win.htm
@@ -25,11 +25,10 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h3 id="welcome-to-github-pages">Windos 系统工具系</h3>
-
- <pre><code class="language-解决方案">
-- 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">蓝奏下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
-- PDF工具箱PDFShaper_Pro_v12.2单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">蓝奏下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
+      <h3>Windos 系统工具系</h3>
+ <pre><code>
+- 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
+- PDF工具箱PDFShaper_Pro_v12.2单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">下载</a> 
 
 </code></pre>           
