--- a/new/win.htm
+++ b/new/win.htm
@@ -28,8 +28,8 @@
       <h3>Windos 系统办公系</h3>
  <pre><code>
 - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
-- PDF工具箱PDFShaper_Pro_v12.2单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
-- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
+- PDF工具箱PDFShaper_Pro v12.2单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
+- 手写模拟器单文件 3.0单文件 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a> 
 
 </code></pre>           
       
