--- a/new/win.htm
+++ b/new/win.htm
@@ -37,7 +37,7 @@
       
        <h3>Windos 媒体工具系</h3>
  <pre><code>
-- 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
+- Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj">lanzou下载</a>  <a href="http://listen1.github.io/listen1">官方开源</a>
 - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
 - 资源 ：<a href="/">lanzou下载</a> 
 
