--- a/new/win.htm
+++ b/new/win.htm
@@ -27,11 +27,15 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
- - 360驱动大师2.0绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg">lanzou下载</a> 
- - 软媒清理大师3.7.8提取版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je">lanzou下载</a> 
- - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
- - PDF工具箱PDFShaper_Pro v12.2单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
- - 手写模拟器单文件 3.0单文件 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a>  <a href="https://melor.lanzoub.com/iYBWg04fnbmb">备用</a>
+  - 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d">lanzou下载</a>
+  - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg">lanzou下载</a>
+  - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i">lanzou下载</a>
+  - 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je">lanzou下载</a>
+  - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf">lanzou下载</a>
+  
+  - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
+  - PDF工具箱PDFShaper_Pro v12.2 单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
+  - 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a>  <a href="https://melor.lanzoub.com/iYBWg04fnbmb">备用</a>
 
 </code></pre>           
       
