--- a/new/win.htm
+++ b/new/win.htm
@@ -36,7 +36,7 @@
   - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
   - PDF工具箱PDFShaper_Pro v12.2 单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
   - 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a>  <a href="https://melor.lanzoub.com/iYBWg04fnbmb">备用</a>
-
+  - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di">lanzou下载</a>
 </code></pre>           
       
        <h3>Windos 媒体工具系</h3>
