--- a/new/win.htm
+++ b/new/win.htm
@@ -27,6 +27,8 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
+  - 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
+  - 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg">lanzou下载</a>
   - 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d">lanzou下载</a>
   - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg">lanzou下载</a>
   - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i">lanzou下载</a>
