--- a/new/win.htm
+++ b/new/win.htm
@@ -27,6 +27,7 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
+  - Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji">lanzou下载</a>  <a href="https://github.com/zbezj/HEU_KMS_Activator">官方开源</a>
   - 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
   - 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg">lanzou下载</a>
   - 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d">lanzou下载</a>
