--- a/new/win.htm
+++ b/new/win.htm
@@ -27,6 +27,7 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
+  - Microsoft Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de">Quark下载</a>
   - Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji">lanzou下载</a>  <a href="https://github.com/zbezj/HEU_KMS_Activator">官方开源</a>
   - 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
   - 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg">lanzou下载</a>
@@ -44,7 +45,7 @@
       
        <h3>Windos 媒体工具系</h3>
  <pre><code>
- - kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://pan.quark.cn/s/a2653f954d59">Quark下载</a>  <a href="https://melor.lanzoub.com/isa0v03qvxaj">lanzou下载</a>
+ - kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj">lanzou下载</a>  <a href="https://pan.quark.cn/s/a2653f954d59">Quark下载</a>
  - Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj">lanzou下载</a>  <a href="http://listen1.github.io/listen1">官方开源</a>
  - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
  - 资源 ：<a href="/">lanzou下载</a> 
