--- a/new/win.htm
+++ b/new/win.htm
@@ -27,6 +27,8 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
+  - U盘启动 微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e">Quark下载</a> <a href="http://www.wepe.cn/">官方下载</a>
+  - Microsoft.Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9">Quark下载</a>
   - Microsoft Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de">Quark下载</a>
   - Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji">lanzou下载</a>  <a href="https://github.com/zbezj/HEU_KMS_Activator">官方开源</a>
   - 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
