--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
 							
                         </div>
                         <div>
-                            <p class="ac">在中国有两大美剧站,其中一个叫爱美剧</p>
+                            <p class="ac">When you take actions across GitHub</p>
                         </div>
                     </div>
                     <div class="main-top-right">
