--- a/new/apk.htm
+++ b/new/apk.htm
@@ -27,19 +27,19 @@
     <main id="content" class="main-content" role="main">
       
       <h3>Android 影音阅读系</h3>
- <pre><code>
- - 酷我音乐 10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e">Quark下载</a>  <a href="https://www.ypojie.com/2081.html">亿破姐</a>
- - 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">lanzou下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
- - 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
- - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
+<pre><code>
+- 酷我音乐 10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e">Quark下载</a>  <a href="https://www.ypojie.com/2081.html">亿破姐</a>
+- 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">lanzou下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
+- 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
+- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
 
 </code></pre>   
       
       <h3>Android 系统工具系</h3>
- <pre><code>
- - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
- - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
- - 资源 ：<a href="/">lanzou下载</a> 
+<pre><code>
+- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b">lanzou下载</a>  <a href="/">备用</a>
+- 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
+- 资源 ：<a href="/">lanzou下载</a> 
 
 </code></pre>     
   
