--- a/new/win.htm
+++ b/new/win.htm
@@ -27,30 +27,31 @@
     <main id="content" class="main-content" role="main">
       <h3>Windos 系统办公系</h3>
 <pre><code>
-  - U盘启动 微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e">Quark下载</a> <a href="http://www.wepe.cn/">官方下载</a>
-  - Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji">lanzou下载</a>  <a href="https://github.com/zbezj/HEU_KMS_Activator">官方开源</a>
-  - 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
-  - 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg">lanzou下载</a>
-  - 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d">lanzou下载</a>
-  - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg">lanzou下载</a>
-  - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i">lanzou下载</a>
-  - 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je">lanzou下载</a>
-  
-  - Microsoft.Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9">Quark下载</a>
-  - Microsoft Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de">Quark下载</a>
-  - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf">lanzou下载</a>
-  - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
-  - PDF工具箱PDFShaper_Pro v12.2 单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
-  - 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a>  <a href="https://melor.lanzoub.com/iYBWg04fnbmb">备用</a>
-  - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di">lanzou下载</a>
+- U盘启动 微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e">Quark下载</a> <a href="http://www.wepe.cn/">官方下载</a>
+- Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji">lanzou下载</a>  <a href="https://github.com/zbezj/HEU_KMS_Activator">官方开源</a>
+- 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij">lanzou下载</a>
+- 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg">lanzou下载</a>
+- 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d">lanzou下载</a>
+- 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg">lanzou下载</a>
+- 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i">lanzou下载</a>
+- 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je">lanzou下载</a>
+
+- TranslucentTB任务栏透明汉化版 ：<a href="https://melor.lanzoub.com/iCFYY05io73i">lanzou下载</a> 
+- Microsoft.Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9">Quark下载</a>
+- Microsoft Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de">Quark下载</a>
+- 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf">lanzou下载</a>
+- 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b">lanzou下载</a>  <a href="https://wws.lanzouw.com/iXsv005dx72b">备用</a>
+- PDF工具箱PDFShaper_Pro v12.2 单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c31k50h">备用</a>
+- 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h">lanzou下载</a>  <a href="https://melor.lanzoub.com/iYBWg04fnbmb">备用</a>
+- AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di">lanzou下载</a>
 </code></pre>           
       
        <h3>Windos 媒体工具系</h3>
- <pre><code>
- - kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj">lanzou下载</a>  <a href="https://pan.quark.cn/s/a2653f954d59">Quark下载</a>
- - Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj">lanzou下载</a>  <a href="http://listen1.github.io/listen1">官方开源</a>
- - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
- - 资源 ：<a href="/">lanzou下载</a> 
+<pre><code>
+- kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj">lanzou下载</a>  <a href="https://pan.quark.cn/s/a2653f954d59">Quark下载</a>
+- Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj">lanzou下载</a>  <a href="http://listen1.github.io/listen1">开源社区</a>
+- FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa">lanzou下载</a>  <a href="https://github.com/dotnetcore/fastgithub/releases">开源社区</a>
+- 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be">lanzou下载</a>  <a href="https://github.com/xiaochunhuamete/freejisuVPN">开源社区</a>
 
 </code></pre>        
       
