--- a/new/apk.htm
+++ b/new/apk.htm
@@ -37,7 +37,7 @@
       
       <h3>Android 系统工具系</h3>
 <pre><code>
-- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b">lanzou下载</a>  <a href="/">备用</a>
+- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b">lanzou下载</a>  <a href="https://github.com/xiaochunhuamete/freejisuVPN">开源社区</a>
 - 资源 ：<a href="/">lanzou下载</a>  <a href="/">备用</a>
 - 资源 ：<a href="/">lanzou下载</a> 
 
