--- a/new/top.htm
+++ b/new/top.htm
@@ -33,9 +33,8 @@
 
 </code></pre>        
       
-
-<p>Having trouble with Pages? Check out our <a href="https://docs.github.com/categories/github-pages-basics/">documentation</a> or <a href="https://support.github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
+<h3>Markdown</h3>
+本页面收集和整理内容均来自于互联网。
       
 
       <footer class="site-footer">
