--- a/new/top.htm
+++ b/new/top.htm
@@ -33,8 +33,8 @@
 
 </code></pre>        
       
-<h3>Markdown</h3>
-本页面收集和整理内容均来自于互联网。
+<h3 id="markdown">Markdown</h3>
+<p>本页面收集和整理内容均来自于互联网。</p>
       
 
       <footer class="site-footer">
