--- a/new/apk.htm
+++ b/new/apk.htm
@@ -33,6 +33,7 @@
 - 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
 
+- 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/l">官网</a>  <a href="https://github.com/gedoor/legado/releases/">开源社区</a>   <a href="https://github.com/kaich/Yuedu">阅读iOS版</a>  <a href="https://yd.mgz6.cc/">喵公子</a>   <a href="http://yuedu.miaogongzi.net/gx.html">猫公子订阅</a>    
 </code></pre>   
       
       <h3>Android 系统工具系</h3>
