--- a/new/apk.htm
+++ b/new/apk.htm
@@ -34,6 +34,7 @@
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
 
 - 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/">官网</a>  <a href="https://github.com/gedoor/legado/releases/">开源社区</a>  <a href="https://github.com/kaich/Yuedu">阅读iOS版</a>  <a href="https://yd.mgz6.cc/">喵公子</a>  <a href="http://yuedu.miaogongzi.net/gx.html">猫公子订阅</a>    
+- 我的听书tingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905">官网</a>  <a href="https://pan.lanzoux.com/b873905">官网</a>
 </code></pre>   
       
       <h3>Android 系统工具系</h3>
