--- a/new/apk.htm
+++ b/new/apk.htm
@@ -32,6 +32,7 @@
 - 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">lanzou下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
 - 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> 
+- 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g">lanzou下载</a>  <a href="https://softxm.lanzoui.com/id5Of05wemfe">备用</a>
 
 - 微信公众：开源阅读 legado_app_3.2 ：<a href="https://www.legado.top/">官网</a>  <a href="https://github.com/gedoor/legado/releases/">开源社区</a>  <a href="https://github.com/kaich/Yuedu">阅读iOS版</a>  <a href="https://yd.mgz6.cc/">喵公子</a>  <a href="http://yuedu.miaogongzi.net/gx.html">猫公子订阅</a>    
 - 微信公众：我的听书APP tingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905">lanzou下载</a>  <a href="http://wwwi.lanzoui.com/b05g1bwf">备用</a>  <a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw">书源分享</a>
