--- a/new/index.htm
+++ b/new/index.htm
@@ -33,7 +33,7 @@
 
 <h3 id="markdown">1. 获取GitHub官方CDN地址</h3>
 
-<p>查询以下三个链接的DNS解析地址，记录下查询到的IP地址。
+<p>查询以下三个链接的DNS解析地址，记录下查询到的IP地址。 <br />
 
 github.com  <br />
 assets-cdn.github.com  <br />
