--- a/new/index.htm
+++ b/new/index.htm
@@ -46,14 +46,12 @@ github.global.ssl.fastly.net  <br />
 路径：C:\Windows\System32\drivers\etc <br />
 
 在末尾添加三个链接的记录并保存。(需管理员权限，注意IP地址与域名间需留有空格)
-<pre><code>链接的记录示例。
-140.82.114.4     github.com
+<pre><code>140.82.114.4     github.com
 185.199.108.153    assets-cdn.github.com
 185.199.109.153    assets-cdn.github.com
 185.199.110.153    assets-cdn.github.com
 185.199.111.153    assets-cdn.github.com
-199.232.69.194    github.global.ssl.fastly.net
-</code></pre>
+199.232.69.194    github.global.ssl.fastly.net</code></pre>
 
 
 
