--- a/new/apk.htm
+++ b/new/apk.htm
@@ -28,6 +28,7 @@
       
       <h3>Android 影音阅读系</h3>
 <pre><code>
+- 无损音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html">说明</a>  <a href="https://www.whg6.com/html/musictools/">官网</a>
 - 酷我音乐 10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e">Quark下载</a>  <a href="https://www.ypojie.com/2081.html">亿破姐</a>
 - 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">lanzou下载</a>  <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a>
 - 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>  <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a>
