--- a/new/index.htm
+++ b/new/index.htm
@@ -26,6 +26,22 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+            <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>主页</th>
+      <th>界面</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>!You can use the <a href="https://github.com/liu673cn/liu/edit/gh-pages/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</td>
+      <td>!Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</td>
+    </tr>
+  </tbody>
+</table>
       <h2>Welcome to GitHub</h2>
  
 <p>由于某些原因，国内访问Github会异常缓慢，在clone仓库时甚至只有10k以下的速度，下载半天有时还会失败需要从头再来，甚是让人恼火。
