--- a/new/index.htm
+++ b/new/index.htm
@@ -69,6 +69,7 @@ github.global.ssl.fastly.net  <br />
 <span class="sb">185.199.110.153    assets-cdn.github.com</span>
 <span class="sb">185.199.111.153    assets-cdn.github.com</span>
 <span class="gs">199.232.69.194    github.global.ssl.fastly.net</span>
+<span class="sx">以上</span>
 </code></pre>
 
 
