--- a/new/index.htm
+++ b/new/index.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -5,14 +6,14 @@
     <title>Github Lucky Coord inate</title>
     
 <!-- End Jekyll SEO tag -->
-
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="/x/assets/css/style.css?v=c9df12775816f51d27e08fc513c6593c2556f1be">
-    <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- Setup Google Analytics -->
   </head>
