--- a/new/apk.htm
+++ b/new/apk.htm
@@ -43,8 +43,14 @@
   </thead>
   <tbody>
     <tr>
-      <td>- MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="无损音乐工具">说明</a>  <a href="https://www.whg6.com/html/musictools/" title="无损音乐工具">官网</a></td>
-      <td>- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="VPN疾速PRO">lanzou下载</a>  <a href="https://github.com/xiaochunhuamete/freejisuVPN" title="VPN疾速PRO">开源社区</a></td>
+      <td>- MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="无损音乐工具">说明</a>  <a href="https://www.whg6.com/html/musictools/" title="无损音乐工具">官网</a>
+      - MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="无损音乐工具">说明</a>  <a href="https://www.whg6.com/html/musictools/" title="无损音乐工具">官网</a>
+      
+      </td>
+      <td>- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="VPN疾速PRO">lanzou下载</a>  <a href="https://github.com/xiaochunhuamete/freejisuVPN" title="VPN疾速PRO">开源社区</a>
+      - VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="VPN疾速PRO">lanzou下载</a>  <a href="https://github.com/xiaochunhuamete/freejisuVPN" title="VPN疾速PRO">开源社区</a>
+
+      </td>
     </tr>
   </tbody>
 </table>    
