--- a/new/apk.htm
+++ b/new/apk.htm
@@ -44,21 +44,20 @@
   <tbody>
     <tr>
       <td>
-- 无损音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="无损音乐工具">说明</a>   <a href="https://www.whg6.com/html/musictools/" title="无损音乐工具">官网</a> <br />
-- 酷我音乐 10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e">Quark下载</a>   <a href="https://www.ypojie.com/2081.html">亿破姐</a> <br />
-- 资源猫 1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb">lanzou下载</a>   <a href="https://wws.lanzouw.com/ixpIm04z6wsb">备用</a> <br />
-- 影视森林 v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0">lanzou下载</a>   <a href="https://tsq.lanzoui.com/b0c4h3qqj">备用</a> <br />
-- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b">lanzou下载</a> <br />
-- 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g">lanzou下载</a>   <a href="https://softxm.lanzoui.com/id5Of05wemfe">备用</a> <br />
+- 音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="说明">①</a>   <a href="https://www.whg6.com/html/musictools/" title="官网">②</a> <br />
+- 酷我音乐10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e" title="Quark下载">①</a>   <a href="https://www.ypojie.com/2081.html" title="亿破姐">②</a> <br />
+- 资源猫1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou下载">①</a>   <a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou下载">②</a> <br />
+- 影视森林v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0" title="lanzou下载">①</a>   <a href="https://tsq.lanzoui.com/b0c4h3qqj" title="lanzou下载">②</a> <br />
+- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b" title="lanzou下载">①</a> <br />
+- 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g" title="lanzou下载">①</a>   <a href="https://softxm.lanzoui.com/id5Of05wemfe" title="lanzou下载">②</a> <br />
 
-- 微信公众：开源阅读 legado_app_3.2 ：<a href="https://www.legado.top/">官网</a>   <a href="https://github.com/gedoor/legado/releases/">开源社区</a>   <a href="https://github.com/kaich/Yuedu">阅读iOS版</a>   <a href="https://yd.mgz6.cc/">喵公子</a>   <a href="http://yuedu.miaogongzi.net/gx.html">猫公子订阅</a> <br />   
-- 微信公众：我的听书APP tingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905">lanzou下载</a>   <a href="http://wwwi.lanzoui.com/b05g1bwf">备用</a>   <a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw">书源分享</a> <br />
+- 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">①</a>   <a href="https://github.com/gedoor/legado/releases/" title="lanzou下载">开源社区</a>   <a href="https://github.com/kaich/Yuedu" title="lanzou下载">阅读iOS版</a>   <a href="https://yd.mgz6.cc/" title="lanzou下载">喵公子</a>   <a href="http://yuedu.miaogongzi.net/gx.html" title="lanzou下载">猫公子订阅</a> <br />   
+- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou下载">①</a>   <a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou下载">备用</a>   <a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="lanzou下载">书源分享</a> <br />
 
       </td>
       <td>
-- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="VPN疾速PRO">lanzou下载</a>   <a href="https://github.com/xiaochunhuamete/freejisuVPN" title="VPN疾速PRO">开源社区</a>
-- 资源 ：<a href="/">lanzou下载</a>   <a href="/">备用</a> <br />
-- 资源 ：<a href="/">lanzou下载</a> <br />
+- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="lanzou下载">①</a>   <a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a><br />
+- 资源 ：<a href="/" title="lanzou下载">①</a>   <a href="/" title="lanzou下载">②</a> <br />
       </td>
     </tr>
   </tbody>
