--- a/new/apk.htm
+++ b/new/apk.htm
@@ -51,8 +51,8 @@
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b" title="lanzou下载">①</a> <br />
 - 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g" title="lanzou下载">①</a>   <a href="https://softxm.lanzoui.com/id5Of05wemfe" title="lanzou下载">②</a> <br />
 
-- 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">①</a>   <a href="https://github.com/gedoor/legado/releases/" title="lanzou下载">开源社区</a>   <a href="https://github.com/kaich/Yuedu" title="lanzou下载">阅读iOS版</a>   <a href="https://yd.mgz6.cc/" title="lanzou下载">喵公子</a>   <a href="http://yuedu.miaogongzi.net/gx.html" title="lanzou下载">猫公子订阅</a> <br />   
-- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou下载">①</a>   <a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou下载">备用</a>   <a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="lanzou下载">书源分享</a> <br />
+- 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">①</a>   <a href="https://github.com/gedoor/legado/releases/" title="Github社区">②</a>   <a href="https://github.com/kaich/Yuedu" title="阅读iOS版">③</a>   <a href="https://yd.mgz6.cc/" title="喵公子">④</a>   <a href="http://yuedu.miaogongzi.net/gx.html" title="猫公子订阅">⑤</a> <br />   
+- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou下载">①</a>   <a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou下载">②</a>   <a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="书源分享">③</a> <br />
 
       </td>
       <td>
