--- a/new/win.htm
+++ b/new/win.htm
@@ -65,10 +65,10 @@
 
       </td>
       <td>
-- kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>
-- Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>
-- FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>
-- 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a>
+- kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
+- Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
+- FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>  <br />
+- 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a>  <br />
       </td>
     </tr>
   </tbody>
