--- a/new/win.htm
+++ b/new/win.htm
@@ -45,27 +45,26 @@
   <tbody>
     <tr>
       <td>     
-- U盘启动 微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e" title="Quark下载">①</a>　<a href="http://www.wepe.cn/" title="官方下载">②</a> <br />
-- Win系统激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji" title="lanzou下载">①</a>　<a href="https://github.com/zbezj/HEU_KMS_Activator" title="Github社区">②</a> <br />
-- 系统属性查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij" title="lanzou下载">①</a> <br />
-- 7z压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg" title="lanzou下载">①</a> <br />
-- 解压软件winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d" title="lanzou下载">①</a> <br />
+- U盘微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e" title="Quark下载">①</a>　<a href="http://www.wepe.cn/" title="官方下载">②</a> <br />
+- Win激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji" title="lanzou下载">①</a>　<a href="https://github.com/zbezj/HEU_KMS_Activator" title="Github社区">②</a> <br />
+- 系统查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij" title="lanzou下载">①</a> <br />
+- 解压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg" title="lanzou下载">①</a> <br />
+- 解压缩winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d" title="lanzou下载">①</a> <br />
 - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg" title="lanzou下载">①</a> <br />
 - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i" title="lanzou下载">①</a> <br />
 - 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je" title="lanzou下载">①</a> <br />
-        
-- TranslucentTB任务栏透明汉化版 ：<a href="https://melor.lanzoub.com/iCFYY05io73i" title="lanzou下载">①</a> <br />
-- Microsoft.Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9" title="Quark下载">①</a> <br />
-- Microsoft Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de" title="Quark下载">①</a> <br />
+- TranslucentTB任务栏透明 ：<a href="https://melor.lanzoub.com/iCFYY05io73i" title="lanzou下载">①</a> <br />
+- Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9" title="Quark下载">①</a> <br />
+- Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de" title="Quark下载">①</a> <br />
 - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf" title="lanzou下载">①</a> <br />
 - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">①</a>　<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">②</a> <br />
-- PDF工具箱PDFShaper_Pro v12.2 单文件解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> <br />
+- PDF工具PDFShaper_Pro v12.2解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> <br />
 - 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h" title="lanzou下载">①</a>　<a href="https://melor.lanzoub.com/iYBWg04fnbmb" title="lanzou下载">②</a> <br />
 - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di" title="lanzou下载">①</a> <br />
 
       </td>
       <td>
-- kuwo音乐PC 9.1.1.6_W4解锁会员版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
+- kuwo音乐PC 9.1.1.6_W4解锁版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
 - Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
 - FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>  <br />
 - 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a>  <br />
