--- a/new/win.htm
+++ b/new/win.htm
@@ -52,13 +52,13 @@
 - Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de" title="Quark下载">①</a> <br />
 - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf" title="lanzou下载">①</a> <br />
 - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">①</a>　<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">②</a> <br />
-- PDF工具PDFShaper_Pro v12.2解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> <br />
-- 手写模拟器单文件 3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h" title="lanzou下载">①</a>　<a href="https://melor.lanzoub.com/iYBWg04fnbmb" title="lanzou下载">②</a> <br />
+- PDF工具PDFShaper v12.2解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> <br />
+- 手写模拟器3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h" title="lanzou下载">①</a>　<a href="https://melor.lanzoub.com/iYBWg04fnbmb" title="lanzou下载">②</a> <br />
 - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di" title="lanzou下载">①</a> <br />
       </td>
       <td>
 - kuwo音乐PC 9.1.1.6_W4解锁版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
-- Listen1 音乐播放器 2.22.1_win_x64 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
+- Listen1 音乐播放器 2.22.1 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
 - FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>  <br />
 - 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a>  <br />
       </td>
