--- a/new/index.htm
+++ b/new/index.htm
@@ -66,8 +66,8 @@ github.global.ssl.fastly.net  <br />
 </code></pre></p>
 <h3>3. 刷新系统DNS缓存</h3>
 <p>Windows+X 打开系统命令行（管理员身份）或powershell <br />
-运行 ipconfig /flushdns 手动刷新系统DNS缓存。</p>
-<p>现在打开Github，clone一个项目到本地试试吧，电信的宽带会轻松达到10M/s的速度。</p>
+运行 ipconfig /flushdns 手动刷新系统DNS缓存。 <br />
+现在打开Github，clone一个项目到本地试试吧，电信的宽带会轻松达到10M/s的速度。</p>
   <h3 id="markdown">Markdown</h3>
 <p>本页面收集和整理内容均来自于互联网。</p>
       <footer class="site-footer">    
