--- a/new/index.htm
+++ b/new/index.htm
@@ -23,7 +23,7 @@
        <a href="index.htm" class="btn">View on GitHub</a>
        <a href="apk.htm" class="btn">Android 手机应用</a>
        <a href="win.htm" class="btn">Windos 电脑软件</a>
-       <a href="top.htm" class="btn">Smart TV电视</a>    
+       <a href="/book/" class="btn">Book 颜如玉</a>    
        <a href="/mao/" class="btn">CatvodTV 猫影视</a>   
        <a href="/biubiu/" class="btn">Biubiu TV播放器</a>     
     </header>
