--- a/new/iso.htm
+++ b/new/iso.htm
@@ -21,13 +21,12 @@
       <h1 class="project-name">Welcome to GitHub </h1>
       <h2 class="project-tagline">Lucky Coord inate</h2>
       
-       <a href="https://liu673cn.github.io/new/index.htm" class="btn">View on GitHub</a>
-       <a href="https://liu673cn.github.io/new/apk.htm" class="btn">Android 手机应用</a>
-       <a href="https://liu673cn.github.io/new/win.htm" class="btn">Windos 电脑软件</a>
-
-       <a href="https://liu673cn.github.io/new/top.htm" class="btn">Smart TV电视</a>    
-       <a href="https://liu673cn.github.io/mao/" class="btn">CatvodTV 猫影视</a>   
-       <a href="https://liu673cn.github.io/biubiu/" class="btn">Biubiu TV播放器</a>     
+       <a href="/new/index.htm" class="btn">View on GitHub</a>
+       <a href="/new/apk.htm" class="btn">Android 手机应用</a>
+       <a href="/new/win.htm" class="btn">Windos 电脑软件</a>
+       <a href="/book/" class="btn">Book 颜如玉</a>     
+       <a href="/mao/" class="btn">CatvodTV 猫影视</a>   
+       <a href="/biubiu/" class="btn">Biubiu TV播放器</a>     
       
     </header>
 
