--- a/new/apk.htm
+++ b/new/apk.htm
@@ -19,9 +19,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">Welcome to GitHub </h1>
       <h2 class="project-tagline">Lucky Coord inate</h2>  
-       <a href="/new/index.htm" class="btn">View on GitHub</a>
-       <a href="/new/apk.htm" class="btn">Android 手机应用</a>
-       <a href="/new/win.htm" class="btn">Windos 电脑软件</a>
+       <a href="index.htm" class="btn">View on GitHub</a>
+       <a href="apk.htm" class="btn">Android 手机应用</a>
+       <a href="win.htm" class="btn">Windos 电脑软件</a>
        <a href="/book/" class="btn">Book 颜如玉</a>    
        <a href="/mao/" class="btn">CatvodTV 猫影视</a>   
        <a href="/biubiu/" class="btn">Biubiu TV播放器</a>       
