--- a/new/win.htm
+++ b/new/win.htm
@@ -65,8 +65,8 @@
     </tr>
   </tbody>
 </table>       
-<h3 id="markdown">Markdown</h3>
-<p>本页面收集和整理内容均来自于互联网。</p>
+    <h3>License</h3>
+<p>本页面只是收集，自用请勿宣全。</p>
          <footer class="site-footer">     
           <span class="site-footer-owner"><a href="/">Lucky</a> is maintained by <a href="https://github.com/">liu673cn</a>.</span>
         
