--- a/new/index.htm
+++ b/new/index.htm
@@ -38,8 +38,15 @@
   </thead>
   <tbody>
     <tr>
-      <td>!You can use the <a href="https://github.com/liu673cn/liu/edit/gh-pages/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</td>
-      <td>!Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</td>
+      <td><a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
+        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
+        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
+        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a>
+      </td>
+      <td><a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
+        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
+        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a>
+      </td>
     </tr>
   </tbody>
 </table>
