--- a/new/index.htm
+++ b/new/index.htm
@@ -38,10 +38,11 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
-        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
-        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
-        <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a>
+      <td><a href="https://browser.360.cn/ee/" title="Download">360 极速浏览器X</a> <br />
+        <a href="https://www.tampermonkey.net/" title="Download">浏览器扩展油猴插件</a> <br />
+        <a href="https://greasyfork.org/zh-CN/scripts" title="Download">脚本库greasyfork</a> <br />
+        <a href="https://www.youhou8.com/" title="Download">脚本库youhou8</a> <br />
+        <a href="https://js.okinstall.com/" title="Download">脚本库okinstall</a>
       </td>
       <td><a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
         <a href="https://pan.lanzoui.com/b0c3cb92f" title="Download">最新版下载地址</a> <br />
