--- a/new/index.htm
+++ b/new/index.htm
@@ -32,8 +32,8 @@
 <table>
   <thead>
     <tr>
-      <th>主页</th>
-      <th>界面</th>
+      <th>主应用及扩展</th>
+      <th>实用脚本列表</th>
     </tr>
   </thead>
   <tbody>
