--- a/new/index.htm
+++ b/new/index.htm
@@ -53,6 +53,9 @@
     </tr>
   </tbody>
 </table>
+      
+         <h2>How To Cook</h2>
+<p>程序员做饭指南  <a href="https://cook.aiurs.co/ title="精确，标准化菜谱和做法"></a>https://cook.aiurs.co/</p>
       <h2>Welcome to GitHub</h2> 
 由于某些原因，国内访问Github会异常缓慢，在clone仓库时甚至只有10k以下的速度，下载半天有时还会失败需要从头再来，甚是让人恼火。
 本文介绍通过修改系统hosts文件的办法，绕过国内dns解析，直接访问GitHub的CDN节点，从而达到加速的目的。不需要科学上网，也不需要海外的服务器辅助。
