--- a/new/index.htm
+++ b/new/index.htm
@@ -38,7 +38,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://browser.360.cn/ee/" title="Download">- 360 极速浏览器X</a> <br />
+      <td><a href="https://browser.360.cn/ee/" title="Download">- 360 极速浏览器X Chrome内核</a> <br />
         <a href="https://www.tampermonkey.net/" title="Download">- 浏览器扩展🐒油猴插件</a> <br />
         <a href="https://greasyfork.org/zh-CN/scripts" title="Download">- 🐵脚本库greasyfork</a> <br />
         <a href="https://www.youhou8.com/" title="Download">- 🐵脚本库youhou8</a> <br />
