--- a/new/apk.htm
+++ b/new/apk.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Github Lucky Coord inate</title>
 <!-- End Jekyll SEO tag -->
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" -->
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
