--- a/new/apk.htm
+++ b/new/apk.htm
@@ -38,8 +38,8 @@
   <tbody>
     <tr>
       <td>
-- 音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="说明">下载①</a>　<a href="https://www.whg6.com/html/musictools/" title="官网">下载②</a> <br />
-- 酷我音乐10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e" title="Quark">下载①</a>　<a href="https://www.ypojie.com/2081.html" title="亿破姐">下载②</a> <br />
+- 音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="说明">✔️①</a>　<a href="https://www.whg6.com/html/musictools/" title="官网">✔️②</a> <br />
+- 酷我音乐10.1.2.1 解锁会员版 ：<a href="https://pan.quark.cn/s/e23723b1454e" title="Quark">✔️①</a>　<a href="https://www.ypojie.com/2081.html" title="亿破姐">下载②</a> <br />
 - 资源猫1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">下载①</a>　<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">下载②</a> <br />
 - 影视森林v1.0.4 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0" title="lanzou">下载①</a>　<a href="https://tsq.lanzoui.com/b0c4h3qqj" title="lanzou">下载②</a> <br />
 - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b" title="lanzou">下载①</a> <br />
@@ -47,7 +47,7 @@
 - 影视猫411复活版（179个源，附导入说明） ：<a href="https://tsq.lanzoui.com/b0c3g84kj" title="lanzou">下载①</a>　
         
 - 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">下载①</a>　<a href="https://github.com/gedoor/legado/releases/" title="Github社区">下载②</a>　<a href="https://github.com/kaich/Yuedu" title="阅读iOS版">下载③</a>　<a href="https://yd.mgz6.cc/" title="喵公子">下载④</a>　<a href="http://yuedu.miaogongzi.net/gx.html" title="猫公子订阅">下载⑤</a> <br />   
-- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou">下载①</a>　<a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou下载">下载②</a>　<a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="书源分享">下载③</a> <br />
+- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou">下载①</a>　<a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou">下载②</a>　<a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="书源分享">下载③</a> <br />
       </td>
       <td>
 - VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">下载②</a><br />
