--- a/new/apk.htm
+++ b/new/apk.htm
@@ -32,7 +32,7 @@
   <thead>
     <tr>
       <th>Android 影音阅读系</th>
-      <th>Android 系统工具系</th>
+      <th>Android</th>
     </tr>
   </thead>
   <tbody>
