--- a/index.htm
+++ b/index.htm
@@ -41,11 +41,11 @@
                             </div>
                             <div class="main-top-left-bottom-right">
                                 <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/biubiu/')">
-                                    <span>biubiu影视</span>
+                                    <span>biubiu 影视</span>
                                     <i class="iconfont iconpc"></i>
                                 </div>
                                 <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/mao/')">
-                                    <span>Catvod影视</span>
+                                    <span>Android TV</span>
                                     <i class="iconfont iconicon-test"></i>
                                 </div>
                             </div>
