--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
         <img src="images/bg.png" tppabs="" alt="">
         <div class="main">
             <header class="ac">
-                <h4>- Lucky Coord inate (MAX)-</h4>
+                <h4>- Lucky Coordinate (MAX)-</h4>
             </header>
 
             <main>
@@ -41,7 +41,7 @@
                             </div>
                             <div class="main-top-left-bottom-right">
                                 <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/biubiu/')">
-                                    <span>biubiu 影视</span>
+                                    <span>Biubiu 影视</span>
                                     <i class="iconfont iconpc"></i>
                                 </div>
                                 <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/mao/')">
@@ -54,7 +54,7 @@
                     <div class="main-top-center hoverDiv" id='source_tv'  onclick="window.open('../new/')">
                         <div>
                             <p class="ac">幸运坐标 (MAX)</p>
-                            <p class="ac">Lucky Coord inate</p>
+                            <p class="ac">Lucky Coordinate</p>
 							
                         </div>
                         <div>
