--- a/new/win.htm
+++ b/new/win.htm
@@ -57,7 +57,7 @@
 - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di" title="lanzou下载">①</a> <br />
       </td>
       <td>
-- Cloudbox绿色软件安装器 ：<a href="https://pan.lanzoui.com/b0ah4yzlc" title="lanzou下载">①</a><br />
+- Cloudbox绿色软件安装器 ：<a href="https://cloudbox.lanzoui.com/s/cloudbox" title="lanzou下载">①</a>  <a href="https://pan.lanzoui.com/b0ah4yzlc" title="lanzou下载">①</a><br />
 - kuwo音乐PC 9.1.1.6_W4解锁版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
 - Listen1 音乐播放器 2.22.1 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
 - FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>  <br />
