--- a/mao/index.htm
+++ b/mao/index.htm
@@ -42,7 +42,7 @@
 <h3>4. 设置——配置地址</h3>          
         <hr />       
 <h4>1). 配置地址---输入站源---确定即可</h4>  
-<p>- URL站源规则 https://shuyuan.miaogongzi.net/shuyuan/1656721538.json  </p>
+<p>- URL站源规则  https://liu673cn.github.io/box/m.json  </p>
 
 <h4>2). 开启存储权限——将你的猫影视站源接口文件放到根目录下</h4>
 <p>- 本地配置规则 clan://localhost/mao.json(文件) </p>        
@@ -54,10 +54,10 @@
 <p>- 一款实时更新的第三方工具箱，一键安装软件，一键配置接口</p>    
         <hr />      
 <h3>5. 操作示例：</h3>  
-            <img src="https://liu673cn.github.io/mao/sub/TVbox/TVbox01.jpg" alt="box1" /> <br />  
-            <img src="https://liu673cn.github.io/mao/sub/TVbox/TVbox02.jpg" alt="box2" /> <br />  
-            <img src="https://liu673cn.github.io/mao/sub/TVbox/TVbox03.jpg" alt="box3" /> <br />  
-            <img src="https://liu673cn.github.io/mao/sub/TVbox/TVbox04.jpg" alt="box4" /> <br />  
+            <img src="https://liu673cn.github.io/box/sub/TVbox/TVbox01.jpg" alt="box1" /> <br />  
+            <img src="https://liu673cn.github.io/box/sub/TVbox/TVbox02.jpg" alt="box2" /> <br />  
+            <img src="https://liu673cn.github.io/box/sub/TVbox/TVbox03.jpg" alt="box3" /> <br />  
+            <img src="https://liu673cn.github.io/box/sub/TVbox/TVbox04.jpg" alt="box4" /> <br />  
  <h3>4. 由于网络接口的时效性，可能无法使用</h3>  
 <pre><code>设置——当前配置接口输入
 https://wds.ecsxs.com/223843.json  
