--- a/mao/index.htm
+++ b/mao/index.htm
@@ -45,13 +45,11 @@
 <p>- URL站源规则  https://liu673cn.github.io/box/m.json  </p>
 
 <h4>2). 开启存储权限——将你的猫影视站源接口文件放到根目录下</h4>
-<p>- 本地配置规则 clan://localhost/mao.json(文件) </p>        
+<p>- 本地配置规则 clan://localhost/m.json(文件) </p>        
 本地配置地址 (三选一 \ 切换着看)  <a href="https://melor.lanzoub.com/irfJ1071czne" title="本地三选一">TVBox.lanzou</a>  <a href="https://pan.quark.cn/s/ac29d8ad60ed" title="本地三选一">TVBox.quark</a><br /> 
 ● 本地配置地址1：clan://localhost/TVBox/ts.json  <br /> 
 ● 本地配置地址2：clan://localhost/TVBox/bc.json  <br /> 
 ● 本地配置地址3：clan://localhost/TVBox/xm.json  <br /> 
-<h4>3). 使用半自动工具ViViTV</h4>
-<p>- 一款实时更新的第三方工具箱，一键安装软件，一键配置接口</p>    
         <hr />      
 <h3>5. 操作示例：</h3>  
             <img src="https://liu673cn.github.io/box/sub/TVbox/TVbox01.jpg" alt="box1" /> <br />  
