--- a/index.htm
+++ b/index.htm
@@ -40,11 +40,11 @@
                                 </div>
                             </div>
                             <div class="main-top-left-bottom-right">
-                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/biubiu/')">
+                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/xbb/')">
                                     <span>Biubiu 影视</span>
                                     <i class="iconfont iconpc"></i>
                                 </div>
-                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/mao/')">
+                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/box/')">
                                     <span>Android TV</span>
                                     <i class="iconfont iconicon-test"></i>
                                 </div>
