--- a/new/apk.htm
+++ b/new/apk.htm
@@ -23,8 +23,8 @@
        <a href="apk.htm" class="btn">Android 手机应用</a>
        <a href="win.htm" class="btn">Windos 电脑软件</a>
        <a href="/book/" class="btn">Book 颜如玉</a>    
-       <a href="/mao/" class="btn">CatvodTV 猫影视</a>   
-       <a href="/biubiu/" class="btn">Biubiu TV播放器</a>       
+       <a href="/box/" class="btn">TVBox 影视盒子</a>   
+       <a href="/xbb/" class="btn">Biubiu TV播放器</a>      
     </header>
     <main id="content" class="main-content" role="main">
         <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
