--- a/new/index.htm
+++ b/new/index.htm
@@ -32,10 +32,10 @@
       
       
 <pre><code>主应用及扩展
-        <a href="https://browser.360.cn/ee/" title="Download">- 360 极速浏览器X Chrome内核</a> 213123<br />
-        <a href="https://www.tampermonkey.net/" title="Download">- 浏览器扩展🐒油猴插件</a> <br />
-        <a href="https://greasyfork.org/zh-CN/scripts" title="Download">- 🐵脚本库greasyfork</a> <br />
-        <a href="https://www.youhou8.com/" title="Download">- 🐵脚本库youhou8</a> <br />
+        - <a href="https://browser.360.cn/ee/" title="Download">360极速浏览器X</a> Chrome内核
+        <a href="https://www.tampermonkey.net/" title="Download">- 浏览器扩展🐒油猴插件</a>
+        <a href="https://greasyfork.org/zh-CN/scripts" title="Download">- 🐵脚本库greasyfork</a>
+        <a href="https://www.youhou8.com/" title="Download">- 🐵脚本库youhou8</a> 
         <a href="https://js.okinstall.com/" title="Download">- 🐵脚本库okinstall</a>
 </code></pre>
 <pre><code>实用脚本列表 
