--- a/new/index.htm
+++ b/new/index.htm
@@ -41,7 +41,7 @@
 <pre><code>实用脚本列表 
         - <a href="https://greasyfork.org/zh-CN/scripts/418804" title="❤️ 视频自动解析，体会拥有VIP的感觉❤️，适配PC+移动">解锁全网VIP视频免费去广告</a>    
         - <a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="解决github打不开、用户头像无法加载、releases无法上传下载、git-clone、git-pull、git-push失败等问题">Github加速神器2.1.4</a>
-        - <a href="https://greasyfork.org/zh-CN/scripts/407485" title="GitHub汉化插件，包含人机翻译">- GitHub汉化插件</a>
+        - <a href="https://greasyfork.org/zh-CN/scripts/407485" title="GitHub汉化插件，包含人机翻译">GitHub汉化插件</a>
         - <a href="https://greasyfork.org/zh-CN/scripts/412245" title="高速下载 Git Clone/SSH、Release、Raw、Code(ZIP) 等文件、项目列表单文件快捷下载 (☁)">Github 高速下载增强</a>
         - <a href="https://greasyfork.org/zh-CN/scripts/418182" title="一个纯净好用的直链下载助手，绝无多余附加功能。免SVIP会员,作者 软件小妹">百度网盘简易下载助手</a>
 </code></pre>    
