--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index/css/init.css" tppabs="">
     <link rel="stylesheet" href="index/css/iconfont.css" tppabs="">
     <link rel="stylesheet" href="index/css/pc-index.css" tppabs="">
-    <link rel="shortcut icon" href="https://github.com/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
     <section class="full-box">
